src/styles/Project.css
#root{
    --white: #F0F8F0;
  --black: #080809;
  --red: #A23A07;
  --blue: #5FAEDE;
  --gold:#D0A356;
}

.project-container{
    position: relative;
    display: grid;
    grid-template-columns: 0.5fr 1fr;
    background-color: var(--black);
    width: 100%;
    height: 100%;
    left: 0%;
    
    
}
.project-info-container{
    position: relative;
    background-color: var(--white);
    margin: 20px;
    height: 500px;
    border-color: var(--black);
    border-radius: 25px;
    border-style: solid;
    
    
}
@keyframes moveDiagonal {
    0% {
      left: 0%;
      top: 0%;
    }
    100% {
      left: 10%;
      top: 10%;
    }
  }
.project-info{
    position: relative;
    background-color: var(--black);
    width: 80%;
    height: 400px;
    margin: 20px;
    left: 0%;
    top: 0%;
    border-radius: 25px;
    border-style:none;
    transition: transform 0.5s ease-in-out;
    color: var(--gold);
}
#time-logger{
  background-image: url('../assets/time-logger.PNG');
  background-size: cover; 
  background-repeat: no-repeat;
}
#chord-generator{
  background-image: url('../assets/ChordGen.PNG');
  background-size: cover; 
  background-repeat: no-repeat;
}
#vocal-sampler{
  background-image: url('../assets/aiko.PNG');
  background-size: cover; 
  background-repeat: no-repeat;

}
#web-synth{
  background-image: url('../assets/websynth.PNG');
  background-size: cover; 
  background-repeat: no-repeat;
}
.project-info:hover {
    transform: translate(20px, 20px); /* Adjust the translation values as desired */
  }

.project-title{
    width: 90%;
    height: 500px;
    margin-left: 35px;
    text-align:left;
      
}
#description{
  font-size: 0.9em;
}
.project-icons{
  width: 100%;
  height: 100px;
  position: relative;
  left:-5px;
  font-size: 2rem;;
  color: var(--black);
  text-align: right;
  
}
#project-icon{
  transition: transform 0.2s ease;
}
#project-icon:hover{
  transform: scale(1.2);
}
#title-link{
  font-size: 3rem;
  font-weight: bold;
}

